--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <img
-            src="{{url_for('static', filename = 'images/work_logo.png')}}"
+            src="{{url_for('static', filename = 'Project_4/Project_4/static/images/work_logo.png')}}"
             alt="Logo"
             style="width: 70px"
           />
