--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="https://cdn.plot.ly/plotly-1.2.0.min.js"></script>
-    <link rel="icon" href="/static/images/work_logo.png" />
+    <link rel="icon" href="./static/images/work_logo.png" />
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript">
@@ -35,7 +35,7 @@
     </script>
     <style>
       body {
-        background: url(/static/images/background.png) no-repeat center center fixed;
+        background: url(./static/images/background.png) no-repeat center center fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
@@ -114,13 +114,13 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="/index.html">HOME <span class="sr-only"></span></a>
+              <a class="nav-link" href="./index.html">HOME <span class="sr-only"></span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="visualizations.html">VISUALIZATIONS</a>
+              <a class="nav-link" href="./visualizations.html">VISUALIZATIONS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/moreinfo.html">MORE INFO</a>
+              <a class="nav-link" href="./moreinfo.html">MORE INFO</a>
             </li>
             <!-- take out dropdown -->
             <!-- <li class="nav-item dropdown">
@@ -778,6 +778,6 @@
     </div>
 
     <!-- javascript functions -->
-    <script src="/static/js/app.js"></script>
+    <script src="./static/js/app.js"></script>
   </body>
 </html>
