--- a/visualizations.html
+++ b/visualizations.html
@@ -24,7 +24,7 @@
     />
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="https://cdn.plot.ly/plotly-1.2.0.min.js"></script>
-    <link rel="icon" href="/static/images/work_logo.png" />
+    <link rel="icon" href="./static/images/work_logo.png" />
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script src="~/Scripts/jquery.cookie.js" type="text/javascript"></script>
     
@@ -62,13 +62,13 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="/index.html">HOME <span class="sr-only"></span></a>
+              <a class="nav-link" href="./index.html">HOME <span class="sr-only"></span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/visualizations.html">VISUALIZATIONS</a>
+              <a class="nav-link" href="./visualizations.html">VISUALIZATIONS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/moreinfo.html">MORE INFO</a>
+              <a class="nav-link" href="./moreinfo.html">MORE INFO</a>
             </li>
             <!-- take out dropdown -->
             <!-- <li class="nav-item dropdown">
