--- a/visualizations.html
+++ b/visualizations.html
@@ -44,7 +44,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <img
-          src="{{url_for('static', filename = 'images/work_logo.png')}}"
+          src="{{url_for('static', filename = './static/images/work_logo.png')}}"
           alt="Logo"
           style="width: 70px"
         />
