--- a/moreinfo.html
+++ b/moreinfo.html
@@ -151,7 +151,7 @@
       <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
         <div class="container-fluid">
           <img
-          src="{{url_for('static', filename = './static/images/work_logo.png')}}"
+          src="{{url_for('static', filename = 'images/work_logo.png')}}"
           alt="Logo"
           style="width: 70px"
         />
@@ -216,22 +216,22 @@
         <p>If you want a holistic education in data science, click the image below </p>
       <div class="hover1 column">
         <a href="https://bootcamp.rutgers.edu/data/" target="_blank">
-          <figure><img src="{{url_for('static', filename = './static/images/coder.png')}}" /></figure>
+          <figure><img src="{{url_for('static', filename = 'images/coder.png')}}" /></figure>
         </a>
       </div>
     </br>
       <div class="images">
         <div class="gallery">
-          <img src="{{url_for('static', filename = './static/images/pooh.png')}}">
+          <img src="{{url_for('static', filename = 'images/pooh.png')}}">
         </br>
         </br>
-          <img src="{{url_for('static', filename = './static/images/ericmeme.png')}}">
+          <img src="{{url_for('static', filename = 'images/ericmeme.png')}}">
         </br>
         </br>
-          <img src="{{url_for('static', filename = './static/images/T&J.png')}}">
+          <img src="{{url_for('static', filename = 'images/T&J.png')}}">
         </br>
         </br>
-          <img src="{{url_for('static', filename = './static/images/meme2.png')}}">
+          <img src="{{url_for('static', filename = 'images/meme2.png')}}">
         </div>
       </div>
       
