updates for page

--- a/moreinfo.html
+++ b/moreinfo.html
@@ -216,16 +216,16 @@
         <p>If you want a holistic education in data science, click the image below </p>
       <div class="hover1 column">
         <a href="https://bootcamp.rutgers.edu/data/" target="_blank">
-          <figure><img src="{{url_for('static', filename = './images/coder.png')}}" /></figure>
+          <figure><img src=".static/images/coder.png" /></figure>
         </a>
       </div>
     </br>
       <div class="images">
         <div class="gallery">
-          <img src="{{url_for('static', filename = './images/pooh.png')}}">
+          <img src="./static/images/pooh.png">
         </br>
         </br>
-          <img src="{{url_for('static', filename = './images/ericmeme.png')}}">
+          <img src="./static/images/ericmeme.png">
         </br>
         </br>
           <img src="{{url_for('static', filename = './images/T&J.png')}}">
