--- a/moreinfo.html
+++ b/moreinfo.html
@@ -228,10 +228,10 @@
           <img src="./static/images/ericmeme.png">
         </br>
         </br>
-          <img src="{{url_for('static', filename = './images/T&J.png')}}">
+          <img src="./static/images/T&J.png">
         </br>
         </br>
-          <img src="{{url_for('static', filename = './images/meme2.png')}}">
+          <img src="./static/images/meme2.png">
         </div>
       </div>
       
