--- a/moreinfo.html
+++ b/moreinfo.html
@@ -151,7 +151,7 @@
       <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
         <div class="container-fluid">
           <img
-          src="{{url_for('static', filename = 'images/work_logo.png')}}"
+          src="./static/images/work_logo.png"
           alt="Logo"
           style="width: 70px"
         />
