--- a/moreinfo.html
+++ b/moreinfo.html
@@ -216,7 +216,7 @@
         <p>If you want a holistic education in data science, click the image below </p>
       <div class="hover1 column">
         <a href="https://bootcamp.rutgers.edu/data/" target="_blank">
-          <figure><img src=".static/images/coder.png" /></figure>
+          <figure><img src="./static/images/coder.png" /></figure>
         </a>
       </div>
     </br>
